using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStrings
{
    public static string isMoving = "isMoving";
    public static string isGrounded = "isGrounded";
    public static string yVelocity = "yVelocity";
    public static string jump = "jump";
    public static string isOnWall = "isOnWall";
    public static string isOnCeiling = "isOnCeiling";
}
